--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,16 +1,15 @@
 footer {
-    padding-block: 20px;
+
+    padding-block: 10px;
     background-color: #232936;
-    margin-top: 50px;
+    margin-top: auto;
 
 }
 
 .textoEnvio {
     color: white;
-    font-size: 25PX;
-    font-family: 'Rubik Iso', cursive;
+    font-size: 20px;
+    font-family: letraFija;
     text-align: center;
 
 }
-
-
