--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -9,12 +9,12 @@
 }
 
 .hijo_formulario {
-    
+
     padding-inline: 5%;
     padding-block: 5%;
 
-    background: rgb(162, 178, 247);
-    background: radial-gradient(circle, rgba(162, 178, 247, 1) 0%, rgba(0, 90, 195, 1) 100%);
+    background: rgb(134, 135, 138);
+
 
 
 
@@ -22,6 +22,7 @@
 
     .form-control {
         padding-inline: 100px;
+        border-radius: 0px;
 
     }
 
@@ -32,7 +33,7 @@
 
     input {
         text-align: center;
-        font-family: 'Questrial', sans-serif;
+        font-family: letraFija;
 
     }
 
@@ -40,7 +41,7 @@
     .tituloFormulario {
         text-align: center;
         margin-top: 20px;
-        font-family: 'Rubik Iso', cursive;
+        font-family: letraFija;
         color: white;
     }
 }
@@ -53,6 +54,22 @@
 
 .botonformulario {
     margin-top: 10px;
-    font-family: 'Questrial', sans-serif;
-    margin-left: 120px;
+
+    margin-left: 100px;
+
+    background-color: #5C636A;
+
+    font-family: letraFija;
+    border: 0px;
+}
+
+
+
+
+.botonformulario:hover {
+    background-color: #323639 !important;
+}
+
+.warning {
+    color: red;
 }
