--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,6 +5,7 @@
 
 @import "formulario";
 @import "modal";
+@import "carrito";
 
 
 @import url('https://fonts.googleapis.com/css2?family=Goldman&family=Rubik+Iso&display=swap');
